# mecha-ctl

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/battery/: cmd.rs  errors.rs  mod.rs
cli/src/bluetooth/: cmd.rs
cli/src/configs/: mod.rs
cli/src/cpu_governanace/: cmd.rs  mod.rs
cli/src/device_info/: cmd.rs  errors.rs  mod.rs
cli/src/display/: cmd.rs  errors.rs  mod.rs
cli/src/led/: cmd.rs  errors.rs  mod.rs
cli/src/motion_sensor/: cmd.rs  mod.rs
cli/src/network/: cmd.rs
cli/src/output_message/: emoji.rs  message.rs  mod.rs
libs/battery-ctl/src/: lib.rs  power_supply.rs
libs/bluetooth-ctl/src/: bluetooth.rs  errors.rs  lib.rs
libs/cpu-governance-ctl/src/: cpu.rs  errors.rs  lib.rs
libs/cpu-governance-ctrl/: Cargo.toml
libs/cpu-governance-ctrl/src/: cpu.rs  errors.rs  lib.rs
libs/device-info-ctl/: Cargo.toml
libs/device-info-ctl/src/: device_info.rs  errors.rs  lib.rs
libs/device-metrics-ctl/: Cargo.toml
libs/device-metrics-ctl/src/: errors.rs  lib.rs  metrics.rs
libs/display_ctl/: Cargo.toml
libs/display_ctl/src/: display.rs  lib.rs
libs/led_ctl/: Cargo.toml
libs/led_ctl/src/: errors.rs  led.rs  lib.rs
libs/motion-sensor-ctl/: Cargo.toml
libs/motion-sensor-ctl/src/: errors.rs  lib.rs  motion_sensor.rs
libs/wireless-ctl/src/: lib.rs  mod.rs  wireless_network.rs
mecha-ctl/cli/: Cargo.toml
mecha-ctl/cli/src/: main.rs
mecha-ctl/cli/src/battery/: battery_cli.rs  mod.rs
mecha-ctl/cli/src/bluetooth/: bluetooth_cli.rs  cmd.rs  errors.rs  mod.rs
mecha-ctl/cli/src/network/: cmd.rs  errors.rs  mod.rs  network_cli.rs
mecha-ctl/libs/battery-ctl/: Cargo.toml
mecha-ctl/libs/battery-ctl/src/: errors.rs  lib.rs  power_supply.rs
mecha-ctl/libs/bluetooth-ctl/: Cargo.toml
mecha-ctl/libs/bluetooth-ctl/src/: bluetooth.rs  lib.rs
mecha-ctl/libs/wireless-ctl/src/: Cargo.toml  lib.rs  mod.rs  wireless_network.rs
mecha-ctl/libs/wireless-ctl/src/wireless_network/: errors.rs  wireless_network.rs
mecha-ctl/server/: Cargo.toml  Config.yml
mecha-ctl/server/proto/: device_info.proto  led_manager.proto  metrics_manager.proto  trustzone_ctrl.proto
mecha-ctl/server/src/: main.rs
mecha-ctl/server/src/configs/: base_config.rs
mecha-ctl/server/src/services/: battery_ctl_service.rs  bluetooth_manager.rs  mod.rs  network_manager_service.rs
server/: Cargo.toml  build.rs
server/proto/: battery_ctrl.proto  bluetooth_manager.proto  cpu_governor_ctrl.proto  device_info.proto  display_manager.proto  led_manager.proto  motion_sensor_manager.proto
server/src/: main.rs
server/src/services/: battery_ctl_service.rs  bluetooth_manager.rs  cpu_ctl_service.rs  device_info_service.rs  display_ctl_service.rs  led_ctl_service.rs  metrics_service.rs  mod.rs  motion_sensor_service.rs  network_ctl_service.rs
