[package]
name = "mecha_ctl_cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mecha-org/mecha-ctl"
homepage = "https://github.com/mecha-org/mecha-ctl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.164", features = ["derive"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mecha_battery_ctl = { path = "../libs/battery-ctl" }
mecha_network_ctl = {path = "../libs/wireless-ctl"}
mecha_bluetooth_ctl ={path="../libs/bluetooth-ctl"}
mecha_display_ctl = {path="../libs/display_ctl"}


