[package]
name = "mecha_device_info_ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1"  
sysinfo = "0.29.10"
serde_json = "1.0.108"
serde = "1.0.193"

[dev-dependencies]
mockall = "0.11.4"
