[package]
name = "mecha_motion_sensor_ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
tracing = "0.1"

[dev-dependencies]
mockall = "0.11.4"
tempdir = "0.3.7"
