[package]
name = "mecha_network_ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
tokio-util = "0.7.8"
wifi-ctrl = "0.2.3"
once_cell = "1.18.0"
tracing = "0.1"


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util"] }
tokio-util  ={ version = "0", features = ["codec"] }
futures = "0"
mockall = "0.11.4"
